--- a/index.html
+++ b/index.html
@@ -2,11 +2,46 @@
 <html lang="en-us">
 
 <head>
-    <title>Your Name</title>
+    <meta charset="utf-8"/>
+    <meta name="description"
+        content="The introductory assignment for Elena Shannon for WDD 230: Web Frontend Development at Brigham Young University - Idaho.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css">
+    <title>WDD230 Elena Shannon Assignment Portal</title>
 </head>
 
 <body>
-    <h1>Your Name</h1>
+    <header>
+        <h1>Elena Shannon</h1>
+            <img src="images/IMG_2999.JPG" alt="Elena Shannon picture">
+    </header>
+    <main>
+
+        <section>
+            <h2>WDD 230: Assignment Portal</h2>
+            <hr>
+            <ul>
+                <li>Lesson 02:
+                    <a href="#">Assignment Link</a>
+                </li>
+                <li>Lesson 03:
+                    <a href="#">Assignment Link</a>
+                </li>
+                <li>Lesson 04:
+                   <a href="#">Link | Link</a>
+                </li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <div>
+            <p> © <span id="year"></span> | Elena Shannon | Utah | <a id="footerlink" href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
+            </p>
+            <p id="modified">Last Updated: <span id="modiDate"></span>
+            </p>
+        </div>
+    </footer>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
