Update for Portal

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     <a href="#">Assignment Link</a>
                 </li>
                 <li>Lesson 04:
-                   <a href="#">Link | Link</a>
+                   <a href="#">Link</a> |
+                   <a href="#">Link</a>
                 </li>
             </ul>
         </section>
