--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description"
         content="The introductory assignment for Elena Shannon for WDD 230: Web Frontend Development at Brigham Young University - Idaho.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <title>WDD230 Elena Shannon Assignment Portal</title>
 </head>
@@ -36,7 +37,7 @@
     </main>
     <footer>
         <div>
-            <p> © <span id="year"></span> | Elena Shannon | Utah | <a id="footerlink" href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
+            <p> &copy <span id="year"></span> | Elena Shannon | Utah | <a id="footerlink" href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
             </p>
             <p id="modified">Last Updated: <span id="modiDate"></span>
             </p>
