--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </main>
     <footer>
         <div>
-            <p> &copy <span id="year"></span> | Elena Shannon | Utah | <a id="footerlink" href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
+            <p> &copy; <span id="year"></span> | Elena Shannon | Utah | <a id="footerlink" href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a>
             </p>
             <p id="modified">Last Updated: <span id="modiDate"></span>
             </p>
