--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <meta name="description"
         content="The introductory assignment for Elena Shannon for WDD 230: Web Frontend Development at Brigham Young University - Idaho.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/small.css">
+        <link rel="stylesheet" href="css/medium.css">
+
     <title>WDD230 Elena Shannon Assignment Portal</title>
 </head>
 
