--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
             <img src="images/IMG_2999.JPG" alt="Elena Shannon picture">
     </header>
     <main>
-
         <section>
             <h2>WDD 230: Assignment Portal</h2>
             <hr>
             <ul>
                 <li>Lesson 02:
-                    <a href="#">Assignment Link</a>
+                    <a href="ranch">Ranch Project</a>
                 </li>
                 <li>Lesson 03:
                     <a href="#">Assignment Link</a>
