--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <hr>
             <ul>
                 <li>Lesson 02:
-                    <a href="ranch">Ranch Project</a>
+                    <a href="ranch">Ranch Project</a> |
+                    <a href="lesson2">Design Principles Assignment</a>
                 </li>
                 <li>Lesson 03:
                     <a href="#">Assignment Link</a>
