--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul>
                 <li>Lesson 02:
                     <a href="ranch">Ranch Project</a> |
-                    <a href="lesson2">Design Principles Assignment</a>
+                    <a href="lesson2/design-principles.html">Design Principles Assignment</a>
                 </li>
                 <li>Lesson 03:
                     <a href="#">Assignment Link</a>
