--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <hr>
             <ul>
                 <li>Lesson 02:
-                    <a href="ranch">Ranch Project</a> |
+                    <a href="ranch/index.html">Ranch Project</a> |
                     <a href="lesson2/design-principles.html">Design Principles Assignment</a>
                 </li>
                 <li>Lesson 03:
