--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <hr>
             <ul>
                 <li>Lesson 02:
-                    <a href="ranch/index.html">Ranch Project</a> |
-                    <a href="lesson2/design-principles.html">Design Principles Assignment</a>
+                    <a href="ranch/index.html" target="blank">Ranch Project</a> |
+                    <a href="lesson2/design-principles.html" target="blank">Design Principles Assignment</a>
                 </li>
                 <li>Lesson 03:
                     <a href="#">Assignment Link</a>
