--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -64,7 +64,7 @@
     </section>
  </main>
 
- <footer>
+ <footer> <!--using JavaScript here-->
     &copy;
     <span id="year">2020</span>
         | Elena Shannon |Last Updated:
