Weather website plan

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                     <a href="ranch/index.html" target="blank">Ranch Project</a> |
                     <a href="lesson2/design-principles.html" target="blank">Design Principles Assignment</a>
                 </li>
-                <li>Lesson 03:
-                    <a href="#">Assignment Link</a>
+                <li>Lesson 03:<a href="water_cycle" target="blank">Water Cycle</a> |
+                     <a href="lesson3/index.html" target="blank">Weather Website Plan</a>
                 </li>
                 <li>Lesson 04:
                    <a href="#">Link</a> |
