Spelling erros fixed

--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -47,7 +47,7 @@
 
         <h2>Target audience and Scenarios</h2>
         <p><a>Description: </a>The main target audience would be both men and women 20-50 years old who enjoy and spend a lot of
-            time outdoors either alone or with their famileis for recreational or work-related reasons.</p>
+            time outdoors either alone or with their families for recreational or work-related reasons.</p>
             <div class="justify"><img id="persona" src="images/pexels-juan-pablo-serrano-arenas-1139743.jpg" alt="Farmer picture"></div>
         <p><a> Persona 1: </a> Tom is a farmer currently living in Preston, Idaho. He owns a small farm (about 150 acres) where
             he grows potatoes and various fall crops, animal feed, and other consumer products. He relies on accurate
