--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -51,7 +51,7 @@
 
         <h2>Site Purpose</h2>
         <p>The purpose of the site "Idahoan Forecast" is to give the citizens and visitors of Soda Springs, Preston,
-            and Fish Haven accurate meteorological information as well as to tell them about local outdoor events. It can be used by anyone making plans for the next couple of weeks. The site will also address various environmental efforts or changes in the area. The site needs to be a clean and easy to navigate website, visually appealing to most visitors.</p>
+            and Fish Haven accurate meteorological information as well as to tell them about local outdoor events. It can be used by anyone making plans for the next couple of weeks. The site will also address various environmental efforts or changes in the area. The site needs to be clean and easy to navigate, visually appealing to most visitors.</p>
     </main>
 
 </body>
