--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -60,8 +60,13 @@
             <li>Main articles' headings: #f49f07, rgb (244,159,7)</li>
             <li>Logo and headers for text on navy-blue background: #fbbd17, rgb (251,189,23)</li>
         </ul>
-
     </main>
+    <footer>
+        &copy;
+        <span id="year"> 2020</span>
+        | Elena Shannon | BYU-I | WDD 230
+    </footer>
+    <script src="js/main.js"></script>
 
 </body>
 
