--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -53,7 +53,12 @@
         <p>The purpose of the site "Idahoan Forecast" is to give the citizens and visitors of Soda Springs, Preston,
             and Fish Haven accurate meteorological information as well as to tell them about local outdoor events. It can be used by anyone making plans for the next couple of weeks. The site will also address various environmental efforts or changes in the area. The site needs to be clean and easy to navigate, visually appealing to most visitors.</p>
     </main>
-
+    <footer>
+     &copy;
+    <span id="year"> 2020</span>
+    | Elena Shannon | BYU-I | WDD 230
+    </footer>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
