--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -45,7 +45,7 @@
     <!-- CONTENT HERE -->
     <main>
 
-        <h2>Target audience and Scenarios</h2>
+        <h2>Target audience</h2>
         <p><a>Description: </a>The main target audience would be both men and women 20-50 years old who enjoy and spend a lot of
             time outdoors either alone or with their families for recreational or work-related reasons.</p>
             <div class="justify"><img id="persona" src="images/pexels-juan-pablo-serrano-arenas-1139743.jpg" alt="Farmer picture"></div>
@@ -57,7 +57,7 @@
                      alt="Young man in a hat picture"></div>
         <p><a>Persona 2: </a> Alex is a physically active single young man who attends Idaho State University, works
             part-time doing landscaping, and enjoys time with his friends and family.</p>
-        <br>
+        <h2>Scenarios</h2>
         <p><a>Scenario: 1.</a>Tom plans to spend all Saturday harvesting potatoes. He wants to know if the
             weather will be good over the weekend.</p>
         <p><a>Scenario: 2. </a>There is a fall festival coming up in Preston, ID, starting on Friday. Tom entered
@@ -72,9 +72,13 @@
         <p><a>Scenario: 5. </a> The company Alex works for wants him to install sod at a house in Soda Springs, ID. Alex
             wants to know what the weather will be like as he works on scheduling the best day that would work for him
             and the family he will be working for.</p>
-
-
     </main>
+    <footer>
+        &copy;
+        <span id="year"> 2020</span>
+        | Elena Shannon | BYU-I | WDD 230
+    </footer>
+    <script src="js/main.js"></script>
 
 </body>
 
