--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -64,9 +64,13 @@
                 <dt>Footer: Raleway, semi-bold, 12pt</dt>
                    <dd id="footertext">Lorem Ipsum</dd>
         </dl>
-
-
     </main>
+    <footer>
+        &copy;
+        <span id="year"> 2020</span>
+        | Elena Shannon | BYU-I | WDD 230
+    </footer>
+    <script src="js/main.js"></script>
 
 </body>
 
