--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -35,9 +35,9 @@
     <!-- NAVIGATION HERE -->
     <nav class="clearfix">
         <ul>
-            <li class="active"><a href="index.html">Site Purpose</a></li>
+            <li><a href="index.html">Site Purpose</a></li>
             <li><a href="target-audience.html">Target Audience</a></li>
-            <li><a href="color-scheme.html">Color Scheme</a></li>
+            <li class="active"><a href="color-scheme.html">Color Scheme</a></li>
             <li><a href="typography.html">Typography</a></li>
         </ul>
     </nav>
