--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -34,8 +34,8 @@
     <!-- NAVIGATION HERE -->
     <nav class="clearfix">
         <ul>
-            <li class="active"><a href="index.html">Site Purpose</a></li>
-            <li><a href="target-audience.html">Target Audience</a></li>
+            <li><a href="index.html">Site Purpose</a></li>
+            <li class="active"><a href="target-audience.html">Target Audience</a></li>
             <li><a href="color-scheme.html">Color Scheme</a></li>
             <li><a href="typography.html">Typography</a></li>
         </ul>
