--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                      <a href="lesson3/index.html" target="blank">Weather Website Plan</a>
                 </li>
                 <li>Lesson 04:
-                   <a href="#">Link</a> |
-                   <a href="#">Link</a>
+                   <a href="start-navigation">Link</a> |
+                   <a href="lesson4/preston.html">Link</a>
                 </li>
             </ul>
         </section>
