--- a/lesson 5/preston.html
+++ b/lesson 5/preston.html
@@ -116,7 +116,7 @@
 
 
 
-            <section class="more_content">
+            <div class="more_content">
                  <div class="local_image"><img src="images/map.jpg" alt="local map">
                 </div>
                 <div class="centered_position">
@@ -131,15 +131,13 @@
                         &#x2709; contact@idahoanweather.com
                         <br>
                         <br>
-                        <a href="http://www.facebook.com"><img src='images/facebook.png' /></a>
-                        <a href="http://www.pinterest.com"><img src='images/pinterest.png' /></a>
-                        <a href="http://www.twitter.com"><img src='images/twitter.png' /></a>
-                        <a href="http://www.whatsapp.com"><img src='images/whatsapp.png' /></a>
+                        <a href="http://www.facebook.com"><img src='images/facebook.png' alt="facebook symbol"/></a>
+                        <a href="http://www.pinterest.com"><img src='images/pinterest.png' alt="pinterest symbol"/></a>
+                        <a href="http://www.twitter.com"><img src='images/twitter.png' alt="twitter symbol"/></a>
+                        <a href="http://www.whatsapp.com"><img src='images/whatsapp.png' alt="whatsapp symbol"/></a>
                   </p>
                   </div>
-
-
-            </section>
+            </div>
 
 
     </main>
