--- a/lesson5/preston.html
+++ b/lesson5/preston.html
@@ -43,19 +43,45 @@
         <div class="weathersum">
             <div class="herodiv">
                 <img src="images/forest.jpg" alt="fall landscape"></div>
-                <section class="summary">
+
+        <section class="summary">
+            <h3>Weather Summary</h3>
+            <table>
+                <tbody>
+                    <tr>
+                        <td>Currently:</td>
+                        <td class="difcolor">Sunny</td>
+                    </tr>
+                    <tr>
+                        <td>High:</td>
+                        <td class="difcolor">64 &#8457;</td>
+                    </tr>
+                    <tr>
+                        <td>Wind Chill:</td>
+                        <td class="difcolor">&#8457;</td>
+                    </tr>
+                    <tr>
+                        <td>Humidity:</td>
+                        <td class="difcolor">49%</td>
+                    </tr>
+                    <tr>
+                        <td>Wind Speed:</td>
+                        <td class="difcolor">8 mph</td>
+                    </tr>
+                    </tbody>
+                </table>
+        </section>
+
+                <!--<section class="summary">
                     <h3>Weather Summary</h3>
                     <p>Currently: <span class="difcolor">Sunny</span></p>
                     <p>High: <span class="difcolor">64 &#8457;</span></p>
                     <p>Wind Chill: <span class="difcolor">&#8457;</span></p>
                     <p>Humidity: <span class="difcolor">49%</span></p>
                     <p>Wind: <span class="difcolor">8 mph</span></p>
-                </section>
+                </section>-->
         </div>
 
-            <!--<div class="content">
-                5 day forecast
-            </div>-->
 
             <h2 class="phone"> 5 day Forecast</h2>
             <section class="forecast">
