--- a/lesson5/preston.html
+++ b/lesson5/preston.html
@@ -113,7 +113,7 @@
             </section>
 
             <section class="content">
-                <img class ="boys_photo" src="images/boys_fall.jpg" alt="two little boys running away">
+                <img class ="boys_photo" src="images/boys_fall.jpg" alt="two boys running">
                     <h3>Little Fish Haven, Idaho, is paradise for residents</h3>
 
                     <p>FISH HAVEN, Idaho — It's an undiscovered paradise. Most people who drive by recognize the raw
