another tiny change

--- a/lesson5/preston.html
+++ b/lesson5/preston.html
@@ -42,7 +42,7 @@
         <h2>Preston City, Idaho</h2>
         <div class="weathersum">
             <div class="herodiv">
-                <img src="images/forest.jpg" alt="fall landscape"></div>
+                <img src="images/forest.jpg" alt="fall scenery"></div>
 
         <section class="summary">
             <h3>Weather Summary</h3>
