--- a/lesson5/preston.html
+++ b/lesson5/preston.html
@@ -71,15 +71,6 @@
                     </tbody>
                 </table>
         </section>
-
-                <!--<section class="summary">
-                    <h3>Weather Summary</h3>
-                    <p>Currently: <span class="difcolor">Sunny</span></p>
-                    <p>High: <span class="difcolor">64 &#8457;</span></p>
-                    <p>Wind Chill: <span class="difcolor">&#8457;</span></p>
-                    <p>Humidity: <span class="difcolor">49%</span></p>
-                    <p>Wind: <span class="difcolor">8 mph</span></p>
-                </section>-->
         </div>
 
 
@@ -143,7 +134,7 @@
 
 
             <div class="more_content">
-                 <div class="local_image"><img src="images/map.jpg" alt="local map">
+                 <div class="local_image"><img src="images/map.jpeg" alt="local map">
                 </div>
                 <div class="centered_position">
                     <p>
