--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description"
         content="The introductory assignment for Elena Shannon for WDD 230: Web Frontend Development at Brigham Young University - Idaho.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+   <!--<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Ubuntu:wght@500&display=swap" rel="stylesheet">-->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
         <link rel="stylesheet" href="css/medium.css">
@@ -38,6 +38,12 @@
                 <li>Lesson 05:
                     <a href="lesson5/preston.html" target="blank">Lesson 5 Preston City</a>
                 </li>
+                <li>Lesson 06:
+
+                    <a href="lesson6/preston.html" target="blank">Lesson 6 Preston City</a>
+                </li>
+
+
             </ul>
         </section>
     </main>
@@ -50,6 +56,12 @@
         </div>
     </footer>
     <script src="js/main.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+        WebFont.load({
+        google: {families: ['Lato', 'Ubuntu']}
+        });
+    </script>
 </body>
 
 </html>
