Pregressive loading assignment

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                     <a href="lesson6/preston.html" target="blank">Lesson 6 Preston City</a>
                 </li>
 
+                <li>Lesson 07:
+
+                    <a href="lesson7/lazyload.html" target="blank">Progressive Loading of Images Assignment</a> |
+                    <a href="lesson7/gallery.html" target="blank">Weather Site Gallery</a>
+                </li>
+
 
             </ul>
         </section>
