--- a/lesson6/preston.html
+++ b/lesson6/preston.html
@@ -95,7 +95,7 @@
 
             <section class="content">
 
-                  <picture>
+                  <picture class="hero">
                       <source media="(max-width: 640px)" srcset="images/boys_250.jpg">
                       <source media="(max-width: 961px)" srcset="images/boys_350.jpg">
                       <img class="boys_photo" src="images/boys.jpg" alt="two boys running">
