--- a/lesson6/preston.html
+++ b/lesson6/preston.html
@@ -20,8 +20,8 @@
      <div id="message">Saturday = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</div>
     <header class="clearfix">
         <picture>
-            <source media="(max-width: 640px)" srcset="images/weather_logo85.png">
-            <source media="(max-width: 961px)" srcset="images/weather_logo110.png">
+            <source media="(max-width: 500px)" srcset="images/weather_logo85.png">
+            <source media="(max-width: 800px)" srcset="images/weather_logo110.png">
             <img src="images/weather-logo.png" alt="logo">
         </picture>
         <section>
@@ -46,10 +46,9 @@
         <h2>Preston City, Idaho</h2>
         <div class="weathersum">
                 <picture class="image_center">
-                     <source media="(max-width: 420px)" srcset="images/heroimage_275.jpg">
-                    <source media="(max-width: 640px)" srcset="images/heroimage_480.jpg">
-                    <source media="(max-width: 961px)" srcset="images/heroimage_640.jpg">
-                    <img src="images/heroimage.jpg" alt="sun and mountain view">
+                    <source media="(max-width: 500px)" srcset="images/heroimage_500.jpg">
+                    <source media="(max-width: 800px)" srcset="images/heroimage_800.jpg">
+                    <img class="im_width" src="images/heroimage.jpg" alt="sun and mountain view">
                 </picture>
 
               <section class="summary">
@@ -96,8 +95,8 @@
             <section class="content">
 
                   <picture class="hero">
-                      <source media="(max-width: 640px)" srcset="images/boys_250.jpg">
-                      <source media="(max-width: 961px)" srcset="images/boys_350.jpg">
+                      <source media="(max-width: 500px)" srcset="images/boys_250.jpg">
+                      <source media="(max-width: 800px)" srcset="images/boys_350.jpg">
                       <img class="boys_photo" src="images/boys.jpg" alt="two boys running">
                   </picture>
 
