--- a/lesson7/gallery.html
+++ b/lesson7/gallery.html
@@ -8,10 +8,10 @@
         <link rel="shortcut icon" href="images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Raleway:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">-->
+    <link rel="stylesheet" href="lesson7.css/normalize.css">
     <link rel="stylesheet" href="lesson7.css/small.css">
     <link rel="stylesheet" href="lesson7.css/medium.css">
     <link rel="stylesheet" href="lesson7.css/large.css">
-     <link rel="stylesheet" href="lesson7.css/normalize.css">
 
     <title>WDD230 Preston Page</title>
 </head>
@@ -44,55 +44,53 @@
 
     <main>
         <h2>Weather Gallery</h2>
-        <section>
                 <div class="grid">
                 <figure class="card">
                     <img src="images/placeholder-2.png" data-src="images/weather_1.jpg" alt="rainbow">
-                    <figcaption class="caption">"Rainbow fields" by Emma Jones</figcaption>
+                    <figcaption class="caption">"Rainbow Fields" by Ann Lee</figcaption>
                 </figure>
 
                 <figure class="card">
                     <img src="images/placeholder-2.png" data-src="images/weather_2.jpg" alt="fall road">
-                    <figcaption class="caption">Fall Road</figcaption>
+                    <figcaption class="caption">"Fall Road" by Tom Cook</figcaption>
                 </figure>
 
 
                 <figure class="card">
                     <img src="images/placeholder-2.png" data-src="images/weather_3.jpg" alt="dark stormy skies">
-                    <figcaption class="caption">Coming storm</figcaption>
+                    <figcaption class="caption">"Storm Coming" by Anon</figcaption>
                 </figure>
 
                 <figure class="card">
                     <img src="images/placeholder-2.png" data-src="images/weather_4.jpg" alt="fog and forest">
-                    <figcaption class="caption">Foggy forest</figcaption>
+                    <figcaption class="caption">"Foggy Morning" by Alex Toon</figcaption>
                 </figure>
 
                 <figure class="card">
                     <img src="images/placeholder-2.png" data-src="images/weather_5.jpg" alt="sunset, forest, snow">
-                    <figcaption class="caption">Snowy sunset</figcaption>
+                    <figcaption class="caption">"Snow" by Mary Smith</figcaption>
                 </figure>
 
                 <figure class="card">
                     <img src="images/placeholder-2.png" data-src="images/weather_6.jpg" alt="sunny meadow">
-                    <figcaption class="caption">Sunny meadow</figcaption>
+                    <figcaption class="caption">"Sunny Meadow" by John Doe</figcaption>
                 </figure>
 
                  <figure class="card">
                      <img src="images/placeholder-2.png" data-src="images/weather_7.jpg" alt="forest trees">
-                     <figcaption class="caption">Forest trees</figcaption>
+                     <figcaption class="caption">"Favorite Place" by Ben Mead</figcaption>
                  </figure>
 
                  <figure class="card">
                      <img src="images/placeholder-2.png" data-src="images/weather_8.jpg" alt="Road in the fall forest">
-                     <figcaption class="caption">Fall colors</figcaption>
+                     <figcaption class="caption">"Fall Colors" by Irma Fizz</figcaption>
                  </figure>
 
                  <figure class="card">
                      <img src="images/placeholder-2.png" data-src="images/weather_9.jpg" alt="sunset and mountain">
-                     <figcaption class="caption">Rocky sunset</figcaption>
+                     <figcaption class="caption">"Sunset" by Timmy Linford</figcaption>
                  </figure>
              </div>
-        </section>
 
     </main>
         <footer>
