--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
                     <a href="lesson7/gallery.html" target="blank">Weather Site Gallery</a>
                 </li>
 
+                <li>
+                    Lesson 08:
+
+                    <a href="lesson-8/tablebuild.html" target="blank">Table Build</a> |
+                    <a href="" target="blank">Lesson 8 Weather site</a>
+                </li>
+
 
             </ul>
         </section>
