--- a/lesson-8/tablebuild.html
+++ b/lesson-8/tablebuild.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>Stylized Table by Elena Shannon for WDD 230at BYU-I</title>
-    <meta name="description" content="">
+    <meta name="description" content="Stylized Table by Elena Shannon for WDD 230 BYU-I">
 
-    <link href="<link href=" https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href=" https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap" rel="stylesheet">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <link rel="stylesheet" href="lesson8.css/tablebuild.css">
 
