Added to lesson 8

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     Lesson 08:
 
                     <a href="lesson-8/tablebuild.html" target="blank">Table Build</a> |
-                    <a href="" target="blank">Lesson 8 Weather site</a>
+                    <a href="lesson-8/stormcenter.html" target="blank">Lesson 8 Weather site</a>
                 </li>
 
 
