--- a/lesson-8/stormcenter.html
+++ b/lesson-8/stormcenter.html
@@ -100,7 +100,7 @@
                                </select>
                            </label>
 
-                           <label class="danger">Is the user in danger?</label>
+                           <label class="danger">Are you or anyone else in danger?</label>
                            <label for="yes-danger" class="sbs"><input type="radio" id="yes-danger" name="danger"
                                    value="yes"> Yes</label>
                            <label for="maybe-danger" class="sbs"><input type="radio" id="maybe-danger" name="danger"
@@ -110,7 +110,7 @@
 
                             <label class="top">Additional Comments (max 500 characters): </label>
                            <label>
-                                   <textarea name="message" rows="12" cols="40" maxlength="500"></textarea>
+                                   <textarea name="message" rows="12" cols="42" maxlength="500"></textarea>
                            </label>
                   </fieldset>
         <input type="submit" value="Submit Storm Information" class="submitBtn">
