--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
                     <a href="lesson-8/stormcenter.html" target="blank">Lesson 8 Weather site</a>
                 </li>
 
+                <li>
+                    Lesson 09:
+
+                    <a href="lesson-9/prophets.html" target="blank">Working with JSON</a> |
+                    <a href="lesson-9/" target="blank">Lesson 9 Weather Site Home Page</a>
+                </li>
+
 
             </ul>
         </section>
