Lesson 9 Weather Site Home Page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     Lesson 09:
 
                     <a href="lesson-9/prophets.html" target="blank">Working with JSON</a> |
-                    <a href="lesson-9/" target="blank">Lesson 9 Weather Site Home Page</a>
+                    <a href="lesson-9/index.html" target="blank">Lesson 9 Weather Site Home Page</a>
                 </li>
 
 
