--- a/lesson-9/index.html
+++ b/lesson-9/index.html
@@ -50,7 +50,7 @@
                 <source media="(max-width: 800px)" srcset="images/forest-800.jpg">
                 <img class="im_width" src="images/forest.jpg" alt="sun and mountain view">
             </picture>
-        </div>
+        </section>
 
         <section>
             <div class="cards"></div>
