--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
                     <a href="lesson-9/index.html" target="blank">Lesson 9 Weather Site Home Page</a>
                 </li>
 
+                 <li>
+                     Lesson 10:
+                     <a href="lesson-10/api-test.html" target="blank">Weather API Activity</a>
+                     <a href="lesson-10/preston.html" target="blank">Preston Weather API</a> |
+                 </li>
+
 
             </ul>
         </section>
