--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
                  <li>
                      Lesson 10:
-                     <a href="lesson-10/api-test.html" target="blank">Weather API Activity</a>
-                     <a href="lesson-10/preston.html" target="blank">Preston Weather API</a> |
+                     <a href="lesson-10/api-test.html" target="blank">Weather API Activity</a> |
+                     <a href="lesson-10/preston.html" target="blank">Preston Weather API</a>
                  </li>
 
 
