Final site draft

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                      <a href="lesson-10/preston.html" target="blank">Preston Weather API</a>
                  </li>
 
+                 Lesson 11:
+                 <a href="lesson11/index.html" target="blank">The Final Weather Website</a> |
+                 </li>
+
 
             </ul>
         </section>
