--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -62,12 +62,12 @@
         </div>
 
         <section>
-            <h2>Events</h2>
+            <h2>Upcoming Events</h2>
+            <div id="havenEvents"></div>
         </section>
 
-        <h2> 5 day Forecast</h2>
-
         <section class="forecast">
+             <h2> 5 day Forecast</h2>
             <div id="gridTemp"></div>
         </section>
 
@@ -117,7 +117,7 @@
                     &#9925;404 Main Street,
                     <br>
                     Fish Haven, ID, 83287</p>
-                <p> &#9743; (208).888 8888
+                <p> &#9743; (208) 888 8888
                     <br>
                     &#x2709; contact@idahoanweather.com
                     <br>
@@ -135,6 +135,8 @@
     <footer>
         &copy;Idahoan Forecast | Elena Shannon
         <div id="currentdate"></div>
+         <div> <a class="linksource" href="https://openweathermap.org/" target="blank">Weather info source</a>
+         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/webfont.js"></script>
