--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                  </li>
 
                  Lesson 11:
-                 <a href="lesson11/index.html" target="blank">The Final Weather Website</a> |
+                 <a href="lesson11/index.html" target="blank">The Final Weather Website</a>
                  </li>
 
 
