New contrast header color

--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -57,7 +57,7 @@
             </section>
             <section class="content">
                 <div class="pullquote">
-                    <h2>9 Reasons Why Idaho Can Be a Destination for Outdoor Lovers</h2>
+                    <h3 id="colorfix">9 Reasons Why Idaho Can Be a Destination for Outdoor Lovers</h3>
                     <hr>
                     <ul>
                         <li> Bear Lake "Carribean-blue" water</li>
