--- a/lesson11/stormcenter.html
+++ b/lesson11/stormcenter.html
@@ -19,11 +19,13 @@
 <body>
     <div id="message">Saturday = Preston Pancakes in the Park! 9:00 a.m. Saturday at the city park pavilion.</div>
     <header class="clearfix">
-        <picture>
+        <a href="index.html">
+            <picture>
             <source media="(max-width: 640px)" srcset="images/weather_logo85.png">
             <source media="(max-width: 961px)" srcset="images/weather_logo110.png">
             <img src="images/weather-logo.png" alt="logo">
         </picture>
+        </a>
         <section>
             <h1>Idahoan Forecast</h1>
             <div class="motto">Delivering the most accurate weather since 1998</div>
