--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -50,7 +50,7 @@
             <picture class="image_center">
                 <source media="(max-width: 500px)" srcset="images/forest-500.jpg">
                 <source media="(max-width: 800px)" srcset="images/forest-800.jpg">
-                <img class="im_width" src="images/forest.jpg" alt="sun and mountain view">
+                <img class="im_width" src="images/forest.jpg" alt="lake and fall-colored trees">
             </picture>
 
 
