--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -63,12 +63,12 @@
         </div>
 
         <section>
-            <h2>Upcoming Events</h2>
+            <h3 class="colorfix">Upcoming Events</h3>
             <div id="havenEvents"></div>
         </section>
 
         <section class="forecast">
-             <h2> 5 day Forecast</h2>
+             <h3 class="colorfix"> 5 day Forecast</h3>
             <div id="gridTemp"></div>
         </section>
 
@@ -80,7 +80,7 @@
                 <img class="boys_photo" src="images/boys.jpg" alt="two boys running">
             </picture>
 
-            <h3>Little Fish Haven, Idaho, is paradise for residents</h3>
+            <h4 class="newHead">Little Fish Haven, Idaho, is paradise for residents</h4>
 
             <p>FISH HAVEN, Idaho — It's an undiscovered paradise. Most people who drive by recognize the raw
                 beauty of a place ringed by high desert mountains and bordered by the shores of a vast natural
