--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
 
-    <title>WDD230 Weatehr Site Home Page</title>
+    <title>WDD230 Weather Site Home Page</title>
 </head>
 
 <body>
@@ -59,7 +59,7 @@
             </section>
             <section class="content">
                 <div class="pullquote">
-                    <h3 id="colorfix">9 Reasons Why Idaho Can Be a Destination for Outdoor Lovers</h3>
+                    <h3 class="colorfix">9 Reasons Why Idaho Can Be a Destination for Outdoor Lovers</h3>
                     <hr>
                     <ul>
                         <li> Bear Lake "Carribean-blue" water</li>
