--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -64,14 +64,14 @@
 
 
         <section>
-             <h2>Upcoming Events</h2>
+             <h3 class="colorfix">Upcoming Events</h3>
             <div id="prestonEvents"></div>
         </section>
 
 
 
         <section class="forecast">
-             <h2> 5 day Forecast</h2>
+             <h3 class="colorfix"> 5 day Forecast</h3>
             <div id="gridTemp"></div>
         </section>
 
@@ -83,7 +83,7 @@
                 <img class="boys_photo" src="images/thanksgiving.jpg" alt="table covered for thanksgiving celebration">
             </picture>
 
-            <h3>Tips for a Happy and Healthier Thanksgiving</h3>
+            <h4 class="newHead">Tips for a Happy and Healthier Thanksgiving</h4>
 
             <p>What a year! As 2020 continues to unfold in dramatic and often personal ways, the Holidays are   greatly affected in size, scope, planning and preparation. </p>
 
