--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -64,12 +64,12 @@
 
 
         <section>
-            <h2>Upcoming Events</h2>
+            <h3 class="colorfix">Upcoming Events</h3>
             <div id="sodaEvents"></div>
         </section>
 
         <section class="forecast">
-            <h2> 5 day Forecast</h2>
+            <h3 class="colorfix"> 5 day Forecast</h3>
             <div id="gridTemp"></div>
         </section>
 
@@ -78,10 +78,10 @@
             <picture class="hero">
                 <source media="(max-width: 500px)" srcset="images/familyart-250.jpg">
                 <source media="(max-width: 800px)" srcset="images/familyart-350.jpg">
-                <img class="boys_photo" src="images/familyart.jpg" alt="family cookign together in the kitchen">
+                <img class="boys_photo" src="images/familyart.jpg" alt="family cooking together in the kitchen">
             </picture>
 
-            <h3>Families resilient in face of COVID-19, American Family Survey says</h3>
+            <h4 class="newHead">Families resilient in face of COVID-19, American Family Survey says</h4>
 
             <p>In the tumult of 2020 America—the pandemic, the protests, the presidential election—BYU political
                 scientists have spotted some good news. </p>
