--- a/lesson11/index.html
+++ b/lesson11/index.html
@@ -23,7 +23,7 @@
             <picture>
             <source media="(max-width: 640px)" srcset="images/weather_logo85.png">
             <source media="(max-width: 961px)" srcset="images/weather_logo110.png">
-            <img src="images/weather-logo.png" alt="logo">
+            <img src="images/weather-logo.png" alt="logo with the sun and the snowflake">
         </picture>
         </a>
         <section>
