--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -22,7 +22,7 @@
             <picture>
             <source media="(max-width: 500px)" srcset="images/weather_logo85.png">
             <source media="(max-width: 800px)" srcset="images/weather_logo110.png">
-            <img src="images/weather-logo.png" alt="logo">
+            <img src="images/weather-logo.png" alt="logo with the sun and the snowflake">
         </picture>
         </a>
         <section>
