--- a/final-project/rentals.html
+++ b/final-project/rentals.html
@@ -95,6 +95,7 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/forecast.js"></script>
 
 </body>
 
