--- a/final-project/reservations.html
+++ b/final-project/reservations.html
@@ -67,19 +67,18 @@
                 <li>Rentals may be returned to either location.</li>
             </ul>
 
-            <h3>Rental, Indemnity and Warranties</h3>
+            <h3>Rental and Warranties:</h3>
             <p>  This is a contract for the rental of the Scooter. We may repossess the Scooter at your expense without notice to you, if the Scooter is
 abandoned or used in violation of law or this Agreement. You agree to indemnify us,
 defend us and hold us harmless from all claims, liability, costs and attorney fees we incur resulting from, or arising out of, this rental and your use of the Scooter.
 We make no warranties, express, implied or apparent, regarding the Scooter, no warranty of merchantability and no warranty that the Scooter is fit for a particular purpose.</p>
 
-            <h3>Responsibility for Scooter Damage or Loss </h3>
+            <h3>Responsibility for Scooter Damage or Loss: </h3>
              <p>You are responsible for all damage to or loss of the Scooter, including the cost of repair, or the actual cash retail value of the Scooter on the date of the loss if the Scooter is not repairable.</p>
 
-             <h3>Assumption of risk</h3>
-             <p>  You understand that there are possible
-risks to yourself and others, including the risks of death, serious bodily injury, and property damage that may be
-associated with operating a scooter.</p>
+             <h3>Assumption of risk:</h3>
+             <p>  By using one of our scooters you assume possible
+risks to yourself and others, including the risks of death, serious bodily injuries, and property damage.</p>
             </div>
         </section>
 
