Deposit info added

--- a/final-project/reservations.html
+++ b/final-project/reservations.html
@@ -79,7 +79,10 @@ We make no warranties, express, implied or apparent, regarding the Scooter, no w
              <h3>Assumption of risk:</h3>
              <p>  By using one of our scooters you assume possible
 risks to yourself and others, including the risks of death, serious bodily injuries, and property damage.</p>
-            </div>
+
+            <h3>Contract</h3>
+            <p>If you are satisfied with the conditions above, please fill in the rental agreement form, and we will send you links to the contract and deposit payment. Thank you for choosing <strong>~Scoots!</strong> </p>
+             </div>
         </section>
 
 
